# MusicServer

./: CMakeLists.txt  README.md  clean.sh  main.cpp
classes/: Album.cpp  Album.hpp  AlbumInfo.cpp  AlbumInfo.hpp  Artist.cpp  Artist.hpp  ArtistInfo.cpp  ArtistInfo.hpp  Song.cpp  Song.hpp
database/filescanner/: AudioInfo.cpp  AudioInfo.hpp  FileFormat.cpp  FileFormat.hpp  TrackScanner.cpp  TrackScanner.hpp
musiclibrary/: IndexManager.cpp  IndexManager.hpp  MusicLibrary.cpp  MusicLibrary.hpp
rest/: AlbumApi.cpp  AlbumApi.hpp  ArtistApi.cpp  ArtistApi.hpp  RestService.cpp  RestService.hpp  SongApi.cpp  SongApi.hpp
